Persist the bearer token across IDE restarts
The token now lives in a file next to the discovery file, with owner-only
permissions, so a client has to be configured only once. A Regenerate token
button on the preference page replaces it and restarts the server, which
rejects every client still using the old one.

The preference page also reports why the server is down when starting failed,
typically a port that is already in use. The server deliberately does not fall
back to another port, because a moving URL would break configured clients.